--- a/resources/rabbitmq_vhost/meta.yaml
+++ b/resources/rabbitmq_vhost/meta.yaml
@@ -7,7 +7,7 @@ input:
       value:
     vhost_name:
       schema: str!
-      value:
+      value: openstack
     ip:
       schema: str!
       value:
@@ -18,4 +18,4 @@ input:
       schema: str!
       value:
 
-tags: [resource/rabbitmq]
+tags: [resources/rabbitmq, resource/rabbitmq_vhost]
