Fix rabbitmq resources

--- a/resources/rabbitmq_service/actions/run.yml
+++ b/resources/rabbitmq_service/actions/run.yml
@@ -15,7 +15,7 @@
         - {{ management_port }}:15672
         env:
             RABBITMQ_NODENAME: {{container_name}}
-    - shell: docker exec -t {{ name }} rabbitmqctl list_users
+    - shell: docker exec -t {{ container_name }} rabbitmqctl list_users
       register: result
       until: result.rc == 0
       retries: 20
