--- a/examples/nodes_list.yaml
+++ b/examples/nodes_list.yaml
@@ -1,9 +1,9 @@
 - id: node_1
-  ip: 10.0.0.2
-  ssh_user: vagrant
-  ssh_key: /vagrant/tmp/keys/ssh_private
-
-- id: node_2
   ip: 10.0.0.3
   ssh_user: vagrant
-  ssh_key: /vagrant/tmp/keys/ssh_private
+  ssh_key: /vagrant/.vagrant/machines/solar-dev1/virtualbox/private_key
+
+- id: node_2
+  ip: 10.0.0.4
+  ssh_user: vagrant
+  ssh_key: /vagrant/.vagrant/machines/solar-dev2/virtualbox/private_key
