--- a/resources/glance_registry_service/actions/run.yml
+++ b/resources/glance_registry_service/actions/run.yml
@@ -3,8 +3,8 @@
   sudo: yes
   tasks:
     - docker:
-       #command: /bin/bash -c "glance-manage db_sync && /usr/bin/glance-registry"
-       command: /usr/bin/glance-registry
+       command: /bin/bash -c "glance-manage db_sync && /usr/bin/glance-registry"
+       #command: /usr/bin/glance-registry
        name: {{ name }}
        image: {{ image }}
        state: running
