Glance API works now with HAProxy

--- a/resources/glance_config/templates/glance-api.conf
+++ b/resources/glance_config/templates/glance-api.conf
@@ -4,7 +4,7 @@ bind_host = 0.0.0.0
 bind_port = {{ api_port }}
 log_file = /var/log/glance/api.log
 backlog = 4096
-registry_host = 0.0.0.0
+registry_host = {{ ip }}
 registry_port = {{ registry_port }}
 registry_client_protocol = http
 
