--- a/resources/glance_config/templates/glance-cache.conf
+++ b/resources/glance_config/templates/glance-cache.conf
@@ -26,7 +26,7 @@ image_cache_stall_time = 86400
 image_cache_max_size = 10737418240
 
 # Address to find the registry server
-registry_host = 0.0.0.0
+registry_host = {{ ip }}
 
 # Port the registry server is listening on
 registry_port = 9191
