--- a/resources/glance_config/templates/glance-scrubber.conf
+++ b/resources/glance_config/templates/glance-scrubber.conf
@@ -32,7 +32,7 @@ cleanup_scrubber = False
 cleanup_scrubber_time = 86400
 
 # Address to find the registry server for cleanups
-registry_host = 0.0.0.0
+registry_host = {{ ip }}
 
 # Port the registry server is listening on
 registry_port = 9191
