Use ansible docker module to remove services

--- a/resources/haproxy_service/actions/remove.yml
+++ b/resources/haproxy_service/actions/remove.yml
@@ -1,6 +1,8 @@
-
 - hosts: [{{ ip }}]
   sudo: yes
   tasks:
-    - shell: docker stop {{ name }}
-    - shell: docker rm {{ name }}
+    - name: haproxy container
+      docker:
+        name: {{ name }}
+        image: {{ image }}
+        state: absent
