--- a/resources/glance_api_service/actions/remove.yml
+++ b/resources/glance_api_service/actions/remove.yml
@@ -1,6 +1,8 @@
-
 - hosts: [{{ ip }}]
   sudo: yes
   tasks:
-    - shell: docker stop {{ name }}
-    - shell: docker rm {{ name }}
+    - name: glance api container
+      docker:
+        name: {{ name }}
+        image: {{ image }}
+        state: absent
