Puppet: added port to keystone

--- a/resources/keystone_puppet/meta.yaml
+++ b/resources/keystone_puppet/meta.yaml
@@ -16,6 +16,10 @@ input:
       schema: str!
       value: keystone
 
+    port:
+      schema: int!
+      value: 5000
+
     ip:
       schema: str!
       value:
