--- a/resources/mariadb_user/actions/remove.yml
+++ b/resources/mariadb_user/actions/remove.yml
@@ -3,7 +3,7 @@
   tasks:
     - name: mariadb user
       mysql_user:
-        name: {{new_user_name}}
+        name: {{user_name}}
         state: absent
         login_user: root
         login_password: {{login_password}}
