Add admin token, fix keystone_admin_port

--- a/templates/openstack_base.yml
+++ b/templates/openstack_base.yml
@@ -7,6 +7,7 @@ resources:
       tenant_name: admin
       keystone_port: '{{keystone_port}}'
       keystone_host: '{{keystone_ip}}'
+      admin_token: '{{admin_token}}'
       ip: '{{ip}}'
       ssh_user: '{{ssh_user}}'
       ssh_key: '{{ssh_key}}'
@@ -19,6 +20,7 @@ resources:
       tenant_name: 'admin_tenant::tenant_name'
       keystone_port: '{{keystone_port}}'
       keystone_host: '{{keystone_ip}}'
+      admin_token: '{{admin_token}}'
       ip: '{{ip}}'
       ssh_user: '{{ssh_user}}'
       ssh_key: '{{ssh_key}}'
@@ -34,9 +36,10 @@ resources:
       description: 'OpenStack Identity Service'
       type: 'identity'
       admin_port: '{{keystone_port}}'
-      port: 'keystone_admin_port'
+      port: '{{keystone_admin_port}}'
       keystone_port: '{{keystone_port}}'
       keystone_host: '{{keystone_ip}}'
+      admin_token: '{{admin_token}}'
       ip: '{{ip}}'
       ssh_user: '{{ssh_user}}'
       ssh_key: '{{ssh_key}}'
@@ -47,6 +50,7 @@ resources:
       tenant_name: services
       keystone_port: '{{keystone_port}}'
       keystone_host: '{{keystone_ip}}'
+      admin_token: '{{admin_token}}'
       ip: '{{ip}}'
       ssh_user: '{{ssh_user}}'
       ssh_key: '{{ssh_key}}'
