--- a/resources/keystone_service_endpoint/actions/run.yaml
+++ b/resources/keystone_service_endpoint/actions/run.yaml
@@ -1,9 +1,5 @@
 - hosts: [{{ ip }}]
   sudo: yes
-  vars:
-    ip: {{ip}}
-    port: {{port}}
-    admin_port: {{admin_port}}
   tasks:
     - name: keystone service and endpoint
       keystone_service:
@@ -16,4 +12,4 @@
         adminurl: {{adminurl}}
         region: "RegionOne"
         state: present
-        endpoint: http://{{keystone_host}}:{{keystone_port}}/v2.0/
+        endpoint: http://{{keystone_host}}:{{keystone_admin_port}}/v2.0/
