--- a/resources/glance_registry_service/actions/run.yml
+++ b/resources/glance_registry_service/actions/run.yml
@@ -5,7 +5,7 @@
     - docker:
        #command: /bin/bash -c "glance-manage db_sync && /usr/bin/glance-registry"
        command: /usr/bin/glance-registry
-       name: {{ name }}
+       name: {{ resource_name }}
        image: {{ image }}
        state: running
        net: host
