--- a/resources/data_container/actions/run.yml
+++ b/resources/data_container/actions/run.yml
@@ -2,7 +2,7 @@
   sudo: yes
   tasks:
     - docker:
-       name: {{ name }}
+       name: {{ resource_name }}
        image: {{ image }}
        state: running
        net: host
