--- a/resources/docker_container/actions/run.yml
+++ b/resources/docker_container/actions/run.yml
@@ -3,7 +3,7 @@
   sudo: yes
   tasks:
     - docker:
-       name: {{ name }}
+       name: {{ resource_name }}
        image: {{ image }}
        state: running
        net: host
