--- a/resources/glance_api_service/actions/run.yml
+++ b/resources/glance_api_service/actions/run.yml
@@ -5,7 +5,7 @@
     - docker:
        command: /bin/bash -c "glance-manage db_sync && /usr/bin/glance-api"
        #command: /usr/bin/glance-api
-       name: {{ name }}
+       name: {{ resource_name }}
        image: {{ image }}
        state: running
        expose:
