--- a/resources/keystone_service_endpoint/actions/run.yaml
+++ b/resources/keystone_service_endpoint/actions/run.yaml
@@ -4,7 +4,7 @@
     - name: keystone service and endpoint
       keystone_service:
         token: {{admin_token}}
-        name: {{name}}
+        name: {{resource_name}}
         type: {{type}}
         description: {{description}}
         publicurl: {{publicurl}}
