--- a/resources/mariadb_service/actions/remove.yml
+++ b/resources/mariadb_service/actions/remove.yml
@@ -3,6 +3,6 @@
   tasks:
     - name: mariadb container
       docker:
-        name: {{ name }}
+        name: {{ resource_name }}
         image: {{ image }}
         state: absent
