Add error handling for ansible_playbook handler

--- a/resources/ansible_local/meta.yaml
+++ b/resources/ansible_local/meta.yaml
@@ -4,7 +4,7 @@ version: 0.0.1
 input:
     var1:
       type: str!
-      value: some_value
+      value: meta
     uuid:
       type: str!
       value: 'aa1das1231'
