--- a/resources/ansible_remote/actions/run.yaml
+++ b/resources/ansible_remote/actions/run.yaml
@@ -1,4 +1,6 @@
 - hosts: '*'
   sudo: yes
+  vars:
+    default1: playbook
   tasks:
-    - debug: "my message"
+    - debug: msg="my message {{default1}}"
