Various fixes for example.py and resource testing

--- a/resources/glance_api_service/meta.yaml
+++ b/resources/glance_api_service/meta.yaml
@@ -36,5 +36,8 @@ input:
     keystone_host:
       schema: str!
       value:
+    keystone_port:
+      schema: int!
+      value:
 
 tags: [resource/container]
