--- a/resources/keystone_service_endpoint/meta.yaml
+++ b/resources/keystone_service_endpoint/meta.yaml
@@ -13,14 +13,16 @@ input:
       value:
     type:
       schema: str!
+      value:
     description:
       schema: str!
-    name:
-      schema: str!
+      value:
     public_ip:
       schema: str!
+      value:
     public_port:
       schema: int!
+      value:
     publicurl:
       schema: str!
       value: http://{{public_ip}}:{{public_port}}/v2.0
@@ -28,13 +30,16 @@ input:
       schema: str!
     internal_port:
       schema: int!
+      value:
     internalurl:
       schema: str!
       value: http://{{ip}}:{{port}}/v2.0
     admin_ip:
       schema: str!
+      value:
     admin_port:
       schema: int!
+      value:
     adminurl:
       schema: str!
       value: http://{{ip}}:{{admin_port}}/v2.0
