Puppet handler fixes
* do not use /tmp/puppet-modules, use /etc/puppet instead.
  /tmp/ is not persistent and being erased on each reboot.
* fix puppet 4.x paths compatibility
* pin to openstack-keyston version 5.1.0 instead of stable/juno

Signed-off-by: Bogdan Dobrelya <bdobrelia@mirantis.com>

--- a/resources/keystone_puppet/meta.yaml
+++ b/resources/keystone_puppet/meta.yaml
@@ -25,7 +25,7 @@ input:
 
     git:
       schema: {repository: str!, branch: str!}
-      value: {repository: 'https://github.com/openstack/puppet-keystone', branch: 'stable/juno'}
+      value: {repository: 'https://github.com/openstack/puppet-keystone', branch: '5.1.0'}
 
 #    forge:
 #      schema: str!
