--- a/resources/rabbitmq_vhost/actions/remove.yml
+++ b/resources/rabbitmq_vhost/actions/remove.yml
@@ -3,5 +3,4 @@
   tasks:
     - new_rabbitmq_vhost: name={{vhost_name}}
                           state=absent
-                          rabbitmqctl="docker exec -it {{container_name}} rabbitmqctl"
-                          node={{container_name}}
+                          node={{node_name}}
