--- a/resources/keystone_service_endpoint/meta.yaml
+++ b/resources/keystone_service_endpoint/meta.yaml
@@ -12,6 +12,9 @@ input:
       schema: str!
       value:
 
+    endpoint_name:
+      schema: str!
+      value:
     type:
       schema: str!
       value:
