Small resources fixes

--- a/resources/mariadb_service/meta.yaml
+++ b/resources/mariadb_service/meta.yaml
@@ -5,6 +5,9 @@ input:
     image: 
       schema: str!
       value: mariadb
+    root_user:
+      schema: str!
+      value: root
     root_password:
       schema: str!
       value: mariadb
