--- a/resources/mariadb_keystone_db/actions/run.yml
+++ b/resources/mariadb_keystone_db/actions/run.yml
@@ -4,6 +4,8 @@
     - name: mariadb db
       mysql_db:
         name: {{ db_name }}
+        #collation: utf8_encode_ci
+        encoding: utf8
         state: present
         login_user: root
         login_password: {{ login_password }}
