More example-puppet simplifications
Added support for mappings of type:
{'A': ['x', 'y']}
(which maps from A to x and from A to y) and for mappings of type:
{'x', 'y', 'z'}
(which maps from x to x, y to y, z to z).

--- a/resources/keystone_service_endpoint/meta.yaml
+++ b/resources/keystone_service_endpoint/meta.yaml
@@ -38,7 +38,7 @@ input:
       value:
     internalurl:
       schema: str!
-      value: http://{{ip}}:{{port}}/v2.0
+      value: http://{{internal_ip}}:{{internal_port}}/v2.0
     admin_ip:
       schema: str!
       value:
@@ -47,7 +47,7 @@ input:
       value:
     adminurl:
       schema: str!
-      value: http://{{ip}}:{{admin_port}}/v2.0
+      value: http://{{admin_ip}}:{{admin_port}}/v2.0
 
     ip:
       schema: str!
