--- a/resources/keystone_role/actions/run.yml
+++ b/resources/keystone_role/actions/run.yml
@@ -2,6 +2,6 @@
   sudo: yes
   tasks:
     - name: install python-keystoneclient
-      shell: pip install python-keystoneclient
+      shell: apt-get install python-keystoneclient
     - name: keystone role
       keystone_user: endpoint=http://{{keystone_host}}:{{keystone_port}}/v2.0/ token={{admin_token}} user={{user_name}} tenant={{tenant_name}} role={{role_name}} state=present
