--- a/resources/keystone_tenant/actions/run.yml
+++ b/resources/keystone_tenant/actions/run.yml
@@ -2,6 +2,6 @@
   sudo: yes
   tasks:
     - name: install python-keystoneclient
-      shell: pip install python-keystoneclient
+      shell: apt-get install python-keystoneclient
     - name: keystone tenant
       keystone_user: endpoint=http://{{keystone_host}}:{{keystone_port}}/v2.0/ token={{admin_token}} tenant={{tenant_name}} state=present
