--- a/resources/keystone_user/actions/run.yml
+++ b/resources/keystone_user/actions/run.yml
@@ -2,6 +2,6 @@
   sudo: yes
   tasks:
     - name: install python-keystoneclient
-      shell: pip install python-keystoneclient
+      shell: apt-get install python-keystoneclient
     - name: keystone user
       keystone_user: endpoint=http://{{ keystone_host }}:{{ keystone_port }}/v2.0/ token={{ admin_token }} user={{ user_name }} password={{ user_password }} tenant={{ tenant_name }} state=present
