Fix cinder api resource metadata
Signed-off-by: Bogdan Dobrelya <bdobrelia@mirantis.com>

--- a/resources/cinder_api_puppet/meta.yaml
+++ b/resources/cinder_api_puppet/meta.yaml
@@ -37,8 +37,8 @@ input:
     schema: int
     value: 5000
   service_workers:
-    schema: str
-    value: $::processorcount
+    schema: int
+    value: 1
   package_ensure:
     schema: str
     value: 'present'
