Update virtual resource for current branch

--- a/resources/keystone_puppet/meta.yaml
+++ b/resources/keystone_puppet/meta.yaml
@@ -15,6 +15,9 @@ input:
     db_name:
       schema: str!
       value: keystone
+    db_host:
+      schema: str!
+      value: keystone
 
     admin_port:
       schema: int!
