--- a/templates/openstack_base.yml
+++ b/templates/openstack_base.yml
@@ -25,6 +25,19 @@ resources:
       ssh_user: '{{ssh_user}}'
       ssh_key: '{{ssh_key}}'
 
+  - id: admin_role
+    from: resources/keystone_role
+    values:
+      role_name: 'admin'
+      user_name: 'admin_user::user_name'
+      tenant_name: 'admin_user::tenant_name'
+      keystone_port: '{{keystone_admin_port}}'
+      keystone_host: '{{keystone_ip}}'
+      admin_token: '{{admin_token}}'
+      ip: '{{ip}}'
+      ssh_user: '{{ssh_user}}'
+      ssh_key: '{{ssh_key}}'
+
   - id: keystone_service_endpoint
     from: resources/keystone_service_endpoint
     values:
@@ -35,7 +48,7 @@ resources:
      {% endraw %}
       description: 'OpenStack Identity Service'
       type: 'identity'
-      name: 'keystone'
+      endpoint_name: 'keystone'
       admin_port: '{{keystone_admin_port}}'
       public_port: '{{keystone_port}}'
       internal_port: '{{keystone_port}}'
