Clean keystone resources

--- a/resources/mariadb_db/actions/run.yml
+++ b/resources/mariadb_db/actions/run.yml
@@ -8,4 +8,4 @@
         login_user: root
         login_password: {{ login_password }}
         login_port: {{ login_port }}
-        login_host: 127.0.0.1
+        login_host: {{db_host}}
