--- a/resources/mariadb_user/meta.yaml
+++ b/resources/mariadb_user/meta.yaml
@@ -15,6 +15,9 @@ input:
     db_name:
       schema: str!
       value:
+    db_host:
+      schema: str!
+      value:
 
     login_password:
       schema: str!
