--- a/resources/mariadb_user/actions/run.yml
+++ b/resources/mariadb_user/actions/run.yml
@@ -11,4 +11,4 @@
         login_user: root
         login_password: {{ login_password }}
         login_port: {{ login_port }}
-        login_host: 127.0.0.1
+        login_host: {{db_host}}
