Add missing db_host input to cinder puppet
Signed-off-by: Bogdan Dobrelya <bdobrelia@mirantis.com>

--- a/resources/cinder_puppet/meta.yaml
+++ b/resources/cinder_puppet/meta.yaml
@@ -166,6 +166,9 @@ input:
     db_name:
       schema: str!
       value: cinder
+    db_host:
+      schema: str!
+      value: 
 
     port:
       schema: int!
